--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.4", features = [] }
+tauri = { version = "1.5.4", features = [ "window-all", "notification-all", "path-all", "fs-all", "shell-all", "dialog-all"] }
 tokio = { version = "1.33.0", features = ["full"] }
 anyhow = "1"
 dirs = "5.0.1"
