--- a/settings/settings.json
+++ b/settings/settings.json
@@ -1,5 +1,22 @@
 {
-    "threads": 2,
     "test": "test",
-    "developerSettings": false
+    "threads": 1,
+    "developerSettings": false,
+    "username": "JRS296",
+    "email": [
+        "jonathansamuel296@gmail.com"
+    ],
+    "name": "Jonathan Rufus Samuel",
+    "dob": "",
+    "language": "English",
+    "font": "inter",
+    "theme": "light",
+    "notification-state": 1,
+    "email-notifications": {
+        "communication-emails": false,
+        "marketing-emails": false,
+        "social-emails": true
+    },
+    "download-db": false,
+    "download-db-dir": ""
 }
