--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "app"
-version = "0.1.0"
+version = "0.1.9"
 description = "A Tauri App"
 authors = ["you"]
 license = ""
@@ -23,9 +23,10 @@ tokio = { version = "1.33.0", features = ["full"] }
 reqwest = { version="0.11", features = ["blocking"] } 
 anyhow = "1"
 dirs = "5.0.1"
-diesel = { version = "2.1.3", features = ["sqlite"] }
-diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
-rusqlite = { version = "0.29.0", features = ["bundled"] }
+dotenv = "0.15.0"
+rusqlite = { version = "0.28.0", features = ["bundled"] }
+r2d2 = "0.8.0"
+r2d2_sqlite = "0.21.0"
 audiotags = "0.4.1"
 id3 = "1.9.0"
 
