--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.0.6",
     "fs": "^0.0.1-security",
+    "hotkeys-js": "^3.13.7",
     "lucide-react": "^0.299.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
@@ -48,7 +49,9 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "react-hotkeys": "^2.0.0",
     "react-icons": "^5.0.1",
+    "react-usestateref": "^1.0.8",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
