--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,6 +31,8 @@ audiotags = "0.4.1"
 id3 = "1.9.0"
 env_logger = "0.11.3"
 log = "0.4.21"
+lofty = "0.20.1"
+base64 = "0.21"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
