--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,6 +33,7 @@ env_logger = "0.11.3"
 log = "0.4.21"
 lofty = "0.20.1"
 base64 = "0.21"
+pyo3 = { version = "0.18", features = ["extension-module"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
