--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,6 +36,7 @@ base64 = "0.21"
 chrono = "0.4"
 lazy_static = "1.4"
 rand = "0.8"
+dotenvy = "0.15"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
